--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http:
+  shared_preferences:
+  image:
+  nettskjema:
+    git:
+      url: https://github.com/LCBC-UiO/flutter_nettskjema
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
