--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,4 +84,4 @@ flutter:
 flutter_icons:
   android: "launcher_icon" 
   ios: true
-  image_path: "assets/appicon.png"
+  image_path: "assets_src/appicon.png"
