--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@
 **/android/**/GeneratedPluginRegistrant.java
 
 # iOS/XCode related
+**/ios/build
 **/ios/**/*.mode1v3
 **/ios/**/*.mode2v3
 **/ios/**/*.moved-aside
@@ -71,3 +72,5 @@
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+
