Update flutter + dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,8 @@
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
 
+.flutter-plugins-dependencies
+ios/Runner.app.dSYM.zip
+ios/Runner.ipa
+ios/tester_udids.txt
+ios/fastlane/report.xml
